consumer bill button alignment change

--- a/package.json
+++ b/package.json
@@ -63,8 +63,12 @@
     ]
   },
   "babel": {
-    "presets": ["react-app"],
-    "plugins": ["@babel/plugin-proposal-private-property-in-object"]
+    "presets": [
+      "react-app"
+    ],
+    "plugins": [
+      "@babel/plugin-proposal-private-property-in-object"
+    ]
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
