--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "yup": "^1.4.0"
   },
   "scripts": {
-    "start": "cross-env PORT=5000 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
