--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
+    "react-push-notification": "^1.5.4",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
