--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.4",
+    "lottie-react": "^2.4.1",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
