--- a/package.json
+++ b/package.json
@@ -24,14 +24,16 @@
     "jspdf-autotable": "^3.8.4",
     "lottie-react": "^2.4.1",
     "moment": "^2.30.1",
+    "perfect-freehand": "^1.2.2",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
+    "react-cropper": "^2.3.3",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
-    "react-signature-canvas": "^1.0.6",
+    "react-signature-canvas": "^1.0.7",
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
