--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jspdf-autotable": "^3.8.4",
     "lottie-react": "^2.4.1",
     "moment": "^2.30.1",
+    "pdfmake": "^0.2.18",
     "perfect-freehand": "^1.2.2",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
