--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "formik": "^2.4.6",
     "fs": "^0.0.1-security",
     "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.3",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.4",
     "lottie-react": "^2.4.1",
