--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "reactvasaiinterviewpractice",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
+    "@craco/craco": "^7.1.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.20",
@@ -45,9 +47,9 @@
     "yup": "^1.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "set GENERATE_SOURCEMAP=false && react-scripts build",
+    "test": "craco test",
     "eject": "react-scripts eject",
     "lint": "eslint ./src --ext .js,.jsx",
     "format": "prettier --write ./src"
