--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.4",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.525.0",
     "moment": "^2.30.1",
     "pdf-lib": "^1.17.1",
     "pdfmake": "^0.2.18",
